# tentalis

./: .gitignore  CLAUDE.md  Dockerfile.intercept  EXPERIMENT.md  LEARNING.md  NEXT-TO-DO.md  PLAN.md  README.md  RESEARCH-EXPERIMENT.md  docker-compose.yml  pyproject.toml
config/openclaw/: AGENTS.md
config/openclaw/manager/: SOUL.md
scripts/: demo.sh
src/: __main__.py  cli.py  config.py  setup_wizard.py
src/alignment/: __init__.py  audit_logger.py  behavioral_eval.py  collusion_detector.py  hackable_scorer.py  misaligned_worker.py  runner.py  scenarios.py
src/alignment/dashboard/: __init__.py  app.py
src/benchmarks/: datasets.py  evaluator.py  runner.py
src/bridge/: http_api.py
src/events/: bus.py  topics.py  types.py
src/inference/: adapter_registry.py
src/intercept/: __main__.py  proxy.py  session_manager.py
src/opd/: hint_extractor.py  rollout_builder.py
src/rewards/: combined_scorer.py  halugate_scorer.py  prm_evaluator.py  prm_trainer.py  scorer.py  trained_prm.py
src/services/: training.py
src/skills/: evolver.py  retriever.py  store.py
src/training/: __init__.py  bridge.py  cispo.py  cispo_trainer.py  combined_trainer.py  dapo.py  grpo.py  loop.py  meta_trainer.py  openrlhf_backend.py  scheduler.py  tinker_backend.py  trainer.py  trajectory_store.py
src/workers/: base.py  gui_worker.py  llm_worker.py  swe_worker.py  terminal_worker.py
tests/: test_cli.py
tests/alignment/: test_audit_logger.py  test_behavioral_eval.py  test_collusion_detector.py  test_hackable_scorer.py  test_misaligned_worker.py  test_runner.py  test_scenarios.py
tests/benchmarks/: test_datasets.py  test_evaluator.py  test_runner.py
tests/events/: test_types.py
tests/inference/: test_adapter_registry.py
tests/intercept/: test_proxy.py
tests/opd/: test_hint_extractor.py  test_rollout_builder.py
tests/rewards/: test_combined_scorer.py  test_halugate_scorer.py  test_scorer.py  test_trained_prm.py
tests/skills/: test_evolver.py  test_retriever.py  test_store.py
tests/training/: test_cispo.py  test_combined_trainer.py  test_dapo.py  test_grpo.py  test_meta_trainer.py  test_openrlhf_backend.py  test_scheduler.py  test_tinker_backend.py  test_trainer.py  test_trajectory_store.py
tests/workers/: test_multi_env.py
